--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,7 @@
 [esp32_base]
 framework = arduino
 board = esp32dev
-;platform = espressif32@~5.0.0
-;platform = espressif32@4.4.0
-platform = espressif32@3.4.0
-;platform = https://github.com/platformio/platform-espressif32.git
+platform = espressif32
 build_flags =  -D CORE_DEBUG_LEVEL=3 
               '-DVERSION="v5.5.2"'
               -Isrc
