--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,9 @@
 [esp32_base]
 framework = arduino
 board = esp32dev
-platform = espressif32
+platform = espressif32 @ 6.5.0
 build_flags =  -D CORE_DEBUG_LEVEL=3 
-              '-DVERSION="v5.5.2"'
+              '-DVERSION="v6.0.0"'
               -Isrc
 build_src_filter =
     +<*>
