Implementing finer timing on WiFi station and access point modes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "*.tpp": "cpp",
         "functional": "cpp"
     },
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "FSharp.suggestGitignore": false
 }
