It compiles for heltec wireless_paper!

--- a/firmware/GXAirCom/platformio.ini
+++ b/firmware/GXAirCom/platformio.ini
@@ -12,8 +12,8 @@
 [esp32_base]
 framework = arduino
 board = esp32dev
-platform = espressif32 @ 6.5.0
-build_flags =  -D CORE_DEBUG_LEVEL=3 
+platform = espressif32
+build_flags =  -DCORE_DEBUG_LEVEL=3
               '-DVERSION="v6.0.0"'
               -Isrc
 build_src_filter =
@@ -25,6 +25,7 @@ lib_deps =
    h2zero/NimBLE-Arduino @ ~1.4.1
    paulstoffregen/OneWire @ ~2.3.7
    adafruit/Adafruit GFX Library @ ~1.11.5
+   ricmoo/QRCode@^0.0.1
 board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
 upload_speed = 921600
@@ -124,12 +125,84 @@ build_flags =  ${esp32_base.build_flags}
 
 [env:wireless-StickV3]
 extends = esp32_base
+board = heltec_wireless_stick
+board_build.mcu = esp32s3
+board_build.f_flash = 80000000L
 build_flags =  ${esp32_base.build_flags}
                '-DENV="wireless-StickV3"'
                -DGSMODULE
                -DWIRELESS_STICK_V3
                -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
-board = esp32-s3-devkitc-1
-; change microcontroller
-board_build.mcu = esp32s3
 board_build.partitions = 8mb_spiffs.csv
+
+[env:wireless-paper]
+extends = esp32_base
+board = heltec_wireless_stick
+board_build.mcu = esp32s3
+board_build.f_flash = 80000000L
+;upload_speed = 921600
+build_flags =
+    ${esp32_base.build_flags}
+    '-DENV="wireless-paper"'
+    -DGSMODULE
+    -DWIRELESS_PAPER
+    -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
+board_build.partitions = 8mb_spiffs.csv
+platform_packages =
+    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+lib_deps =
+;;    heltecautomation/Heltec ESP32 Dev-Boards @ ^2.0.1
+    https://github.com/HelTecAutomation/Heltec_ESP32.git
+
+[env:HeltecWirelessStick]
+framework = arduino
+board = heltec_wireless_stick
+board_build.mcu = esp32s3
+board_build.f_flash = 80000000L
+platform = espressif32
+monitor_speed = 115200
+upload_speed = 921600
+;platform_packages =
+;    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+;    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+lib_deps =
+;    https://github.com/Heltec-Aaron-Lee/WiFi_Kit_series.git
+;    heltecautomation/Heltec ESP32 Dev-Boards @ ^2.0.1
+    https://github.com/HelTecAutomation/Heltec_ESP32.git
+
+[env:test]
+framework = arduino
+board = heltec_wireless_stick
+board_build.mcu = esp32s3
+board_build.f_flash = 80000000L
+platform = espressif32
+monitor_speed = 115200
+upload_speed = 921600
+build_flags =
+    -DCORE_DEBUG_LEVEL=3
+    '-DVERSION="v6.0.0"'
+    -Isrc
+    '-DENV="wireless-paper"'
+    -DGSMODULE
+    -DWIRELESS_PAPER
+    -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
+    ;See https://raw.githubusercontent.com/espressif/arduino-esp32/master/boards.txt for hints about the
+    ;correct values to use. These all come from the key 'heltec_wireless_paper.build.defines'
+    -DMCU_ESP32_S3
+    -DHELTEC_BOARD=60
+    -DWIRELESS_PAPER
+    -DSLOW_CLK_TPYE=1
+    -DRADIO_CHIP_SX1262
+    -DLoRaWAN_DEBUG_LEVEL=1
+    -DACTIVE_REGION=LORAMAC_LORAMAC_REGION_US915
+    -DLORAWAN_PREAMBLE_LENGTH=8
+    -DLORAWAN_DEVEUI_AUTO=0
+platform_packages =
+    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+;    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+lib_deps =
+;    https://github.com/Heltec-Aaron-Lee/WiFi_Kit_series.git
+;    heltecautomation/Heltec ESP32 Dev-Boards @ ^2.0.1
+    adafruit/Adafruit BusIO@^1.15.0
+    https://github.com/HelTecAutomation/Heltec_ESP32.git
