--- a/firmware/GXAirCom/platformio.ini
+++ b/firmware/GXAirCom/platformio.ini
@@ -8,93 +8,102 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
 [esp32_base]
 framework = arduino
 board = esp32dev
 platform = espressif32
-build_flags =  -DCORE_DEBUG_LEVEL=3
-              '-DVERSION="v6.0.0"'
-              -Isrc
+build_flags =
+    -DCORE_DEBUG_LEVEL=3
+    '-DVERSION="v6.0.1"'
+    -Isrc
 build_src_filter =
     +<*>
     -<.git/>
     -<.svn/>
     -<web/filetoarray.c>
 lib_deps =
-   h2zero/NimBLE-Arduino @ ~1.4.1
-   paulstoffregen/OneWire @ ~2.3.7
-   adafruit/Adafruit GFX Library @ ~1.11.5
-   ricmoo/QRCode@^0.0.1
+    h2zero/NimBLE-Arduino @ ~1.4.1
+    paulstoffregen/OneWire @ ~2.3.7
+    adafruit/Adafruit BusIO@^1.15.0
+    adafruit/Adafruit GFX Library @ ~1.11.5
+    ricmoo/QRCode@^0.0.1
 board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
 upload_speed = 921600
 monitor_flags = 
-   -f
-   esp32_exception_decoder
+    -f
+    esp32_exception_decoder
 extra_scripts = post:extra_script.py
 
 [env:psRam]
 extends = esp32_base
-build_flags =  ${esp32_base.build_flags}
-               '-DENV="psRam"'
-               -DAIRMODULE
-               -DGSMODULE
-               -DSSD1306
-               -DEINK
-               -DBOARD_HAS_PSRAM  
-               -DBLUETOOTH
+build_flags =
+    ${esp32_base.build_flags}
+    '-DENV="psRam"'
+    -DAIRMODULE
+    -DGSMODULE
+    -DSSD1306
+    -DEINK
+    -DBOARD_HAS_PSRAM
+    -DBLUETOOTH
 board_build.partitions = ${esp32_base.board_build.partitions}
 
 [env:nopsRam]
 extends = esp32_base
-build_flags =  ${esp32_base.build_flags}
-               '-DENV="nopsRam"'
-               -DAIRMODULE
-               -DGSMODULE
-               -DSSD1306
-               -DEINK
-               -DEXT_POWER_ON_OFF
-               -DBLUETOOTH
+build_flags =
+    ${esp32_base.build_flags}
+    '-DENV="nopsRam"'
+    -DAIRMODULE
+    -DGSMODULE
+    -DSSD1306
+    -DEINK
+    -DEXT_POWER_ON_OFF
+    -DBLUETOOTH
 
 [env:sim7000_psRam]
 extends = esp32_base
-build_flags =  ${esp32_base.build_flags}
-               '-DENV="sim7000_psRam"'
-               -DAIRMODULE
-               -DGSMODULE
-               -DSSD1306
-               -DEINK
-               -DGSM_MODULE
-               -DTINY_GSM_MODEM_SIM7000
-               -DBOARD_HAS_PSRAM
-               -DBLUETOOTH
-               -mfix-esp32-psram-cache-issue
-board_build.partitions = ${esp32_base.board_build.partitions}
+build_flags =
+    ${esp32_base.build_flags}
+    '-DENV="sim7000_psRam"'
+    -DAIRMODULE
+    -DGSMODULE
+    -DSSD1306
+    -DEINK
+    -DGSM_MODULE
+    -DTINY_GSM_MODEM_SIM7000
+    -DBOARD_HAS_PSRAM
+    -DBLUETOOTH
+    -mfix-esp32-psram-cache-issue
+board_build.partitions =
+    ${esp32_base.board_build.partitions}
 
 [env:sim800_nopsRam]
 extends = esp32_base
-build_flags =  ${esp32_base.build_flags}
-               '-DENV="sim800_nopsRam"'
-               -DAIRMODULE
-               -DGSMODULE
-               -DSSD1306
-               -DEINK
-               -DGSM_MODULE
-               -DBLUETOOTH
-               -DTINY_GSM_MODEM_SIM800
-board_build.partitions = ${esp32_base.board_build.partitions}
+build_flags =
+    ${esp32_base.build_flags}
+    '-DENV="sim800_nopsRam"'
+    -DAIRMODULE
+    -DGSMODULE
+    -DSSD1306
+    -DEINK
+    -DGSM_MODULE
+    -DBLUETOOTH
+    -DTINY_GSM_MODEM_SIM800
+
+board_build.partitions =
+    ${esp32_base.board_build.partitions}
 
 [env:T-Beam-S3Core]
 extends = esp32_base
-build_flags =  ${esp32_base.build_flags}
-               '-DENV="T-Beam-S3Core"'
-               -DSH1106G
-               -DAIRMODULE
-               -DBOARD_HAS_PSRAM
-               -DBLUETOOTH
-               -DS3CORE
-               -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
+build_flags =
+    ${esp32_base.build_flags}
+    '-DENV="T-Beam-S3Core"'
+    -DSH1106G
+    -DAIRMODULE
+    -DBOARD_HAS_PSRAM
+    -DBLUETOOTH
+    -DS3CORE
+    -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
 board = esp32-s3-devkitc-1
 ; change microcontroller
 board_build.mcu = esp32s3
@@ -104,85 +113,47 @@ board_build.partitions = 8mb_spiffs.csv
 ;Ground-station without Bluetooth support
 ;latest development kit
 extends = esp32_base
-build_flags =  ${esp32_base.build_flags}
-               '-DENV="Gs"'
-               -DGSMODULE
-               -DSSD1306
-               -DEINK
+build_flags =
+    ${esp32_base.build_flags}
+    '-DENV="Gs"'
+    -DGSMODULE
+    -DSSD1306
+    -DEINK
 
 [env:GsSim7000]
 ;Ground-station without Bluetooth support
 ;latest development kit
 extends = esp32_base
-build_flags =  ${esp32_base.build_flags}
-               '-DENV="GsSim7000"'
-               -DGSMODULE
-               -DEINK
-               -DGSM_MODULE
-               -DTINY_GSM_MODEM_SIM7000
-               -DBOARD_HAS_PSRAM
-
+build_flags =
+    ${esp32_base.build_flags}
+    '-DENV="GsSim7000"'
+    -DGSMODULE
+    -DEINK
+    -DGSM_MODULE
+    -DTINY_GSM_MODEM_SIM7000
+    -DBOARD_HAS_PSRAM
 
 [env:wireless-StickV3]
 extends = esp32_base
 board = heltec_wireless_stick
 board_build.mcu = esp32s3
 board_build.f_flash = 80000000L
-build_flags =  ${esp32_base.build_flags}
-               '-DENV="wireless-StickV3"'
-               -DGSMODULE
-               -DWIRELESS_STICK_V3
-               -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
-board_build.partitions = 8mb_spiffs.csv
+build_flags =
+    ${esp32_base.build_flags}
+    '-DENV="wireless-StickV3"'
+    -DGSMODULE
+    -DWIRELESS_STICK_V3
+    -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
+board_build.partitions =
+    8mb_spiffs.csv
 
 [env:wireless-paper]
 extends = esp32_base
-board = heltec_wireless_stick
+board = heltec_wireless_stick ;platform.io does not yet have a board definition for heltec_wireless_paper
 board_build.mcu = esp32s3
 board_build.f_flash = 80000000L
-;upload_speed = 921600
 build_flags =
     ${esp32_base.build_flags}
-    '-DENV="wireless-paper"'
-    -DGSMODULE
-    -DWIRELESS_PAPER
-    -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
-board_build.partitions = 8mb_spiffs.csv
-platform_packages =
-    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-lib_deps =
-;;    heltecautomation/Heltec ESP32 Dev-Boards @ ^2.0.1
-    https://github.com/HelTecAutomation/Heltec_ESP32.git
-
-[env:HeltecWirelessStick]
-framework = arduino
-board = heltec_wireless_stick
-board_build.mcu = esp32s3
-board_build.f_flash = 80000000L
-platform = espressif32
-monitor_speed = 115200
-upload_speed = 921600
-;platform_packages =
-;    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-;    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-lib_deps =
-;    https://github.com/Heltec-Aaron-Lee/WiFi_Kit_series.git
-;    heltecautomation/Heltec ESP32 Dev-Boards @ ^2.0.1
-    https://github.com/HelTecAutomation/Heltec_ESP32.git
-
-[env:test]
-framework = arduino
-board = heltec_wireless_stick
-board_build.mcu = esp32s3
-board_build.f_flash = 80000000L
-platform = espressif32
-monitor_speed = 115200
-upload_speed = 921600
-build_flags =
-    -DCORE_DEBUG_LEVEL=3
-    '-DVERSION="v6.0.0"'
-    -Isrc
     '-DENV="wireless-paper"'
     -DGSMODULE
     -DWIRELESS_PAPER
@@ -198,11 +169,9 @@ build_flags =
     -DACTIVE_REGION=LORAMAC_LORAMAC_REGION_US915
     -DLORAWAN_PREAMBLE_LENGTH=8
     -DLORAWAN_DEVEUI_AUTO=0
+board_build.partitions = 8mb_spiffs.csv
 platform_packages =
     platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
-;    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 lib_deps =
-;    https://github.com/Heltec-Aaron-Lee/WiFi_Kit_series.git
-;    heltecautomation/Heltec ESP32 Dev-Boards @ ^2.0.1
-    adafruit/Adafruit BusIO@^1.15.0
+    ${esp32_base.lib_deps}
     https://github.com/HelTecAutomation/Heltec_ESP32.git
