Getting the wireless-paper to compile with the lora library linked in properly

--- a/firmware/GXAirCom/platformio.ini
+++ b/firmware/GXAirCom/platformio.ini
@@ -144,8 +144,7 @@ build_flags =
     -DGSMODULE
     -DWIRELESS_STICK_V3
     -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
-board_build.partitions =
-    8mb_spiffs.csv
+board_build.partitions = 8mb_spiffs.csv
 
 [env:wireless-paper]
 extends = esp32_base
@@ -156,7 +155,6 @@ build_flags =
     ${esp32_base.build_flags}
     '-DENV="wireless-paper"'
     -DGSMODULE
-    -DWIRELESS_PAPER
     -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
     ;See https://raw.githubusercontent.com/espressif/arduino-esp32/master/boards.txt for hints about the
     ;correct values to use. These all come from the key 'heltec_wireless_paper.build.defines'
@@ -168,6 +166,8 @@ build_flags =
     -DLoRaWAN_DEBUG_LEVEL=1
     -DLORAWAN_PREAMBLE_LENGTH=8
     -DLORAWAN_DEVEUI_AUTO=0
+    -L$PROJECT_LIBDEPS_DIR/wireless-paper/Heltec\ ESP32\ Dev-Boards/src/esp32s3
+    -llorawan
 board_build.partitions = 8mb_spiffs.csv
 platform_packages =
     platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
