Stubbing out the HT_ICMEN2R13EFC1 screen integration

--- a/firmware/GXAirCom/platformio.ini
+++ b/firmware/GXAirCom/platformio.ini
@@ -155,6 +155,7 @@ build_flags =
     ${esp32_base.build_flags}
     '-DENV="wireless-paper"'
     -DGSMODULE
+    -DEINK
     -DARDUINO_USB_CDC_ON_BOOT=1 ;for output over USB-C
     ;See https://raw.githubusercontent.com/espressif/arduino-esp32/master/boards.txt for hints about the
     ;correct values to use. These all come from the key 'heltec_wireless_paper.build.defines'
